tests/baselines/reference/accessorField5(target=es5).errors.txt
tests/cases/conformance/classes/propertyMemberDeclarations/accessorField5.ts(2,14): error TS18045: Properties with the 'accessor' modifier are only available when targeting ECMAScript 2015 and higher.
tests/cases/conformance/classes/propertyMemberDeclarations/accessorField5.ts(3,14): error TS18045: Properties with the 'accessor' modifier are only available when targeting ECMAScript 2015 and higher.
tests/cases/conformance/classes/propertyMemberDeclarations/accessorField5.ts(4,21): error TS18045: Properties with the 'accessor' modifier are only available when targeting ECMAScript 2015 and higher.
tests/cases/conformance/classes/propertyMemberDeclarations/accessorField5.ts(5,21): error TS18045: Properties with the 'accessor' modifier are only available when targeting ECMAScript 2015 and higher.


==== tests/cases/conformance/classes/propertyMemberDeclarations/accessorField5.ts (4 errors) ====
    class C1 {
        accessor ["w"]: any;
                 ~~~~~
!!! error TS18045: Properties with the 'accessor' modifier are only available when targeting ECMAScript 2015 and higher.
        accessor ["x"] = 1;
                 ~~~~~
!!! error TS18045: Properties with the 'accessor' modifier are only available when targeting ECMAScript 2015 and higher.
        static accessor ["y"]: any;
                        ~~~~~
!!! error TS18045: Properties with the 'accessor' modifier are only available when targeting ECMAScript 2015 and higher.
        static accessor ["z"] = 2;
                        ~~~~~
!!! error TS18045: Properties with the 'accessor' modifier are only available when targeting ECMAScript 2015 and higher.
    }
    
    declare var f: any;
    class C2 {
        // @ts-ignore
        accessor [f()] = 1;
    }